overflow bugs

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,6 +2,8 @@
 
 body {
   color: var(--color-text);
+  width: 100vw;
+  height: 100vh;
   background-image: linear-gradient(
     109.6deg,
     rgba(156, 252, 248, 1) 11.2%,
